@@ -266,7 +266,7 @@ public:		// Added in 1.4 (1:5)
 	/**
 	 * @brief Tells SourceMM to add VSP hooking capability to plugins.  
 	 *
-	 * Since this  potentially uses more resources than it would otherwise, plugins have to 
+	 * Since this potentially uses more resources than it would otherwise, plugins have to 
 	 * explicitly enable the feature.  Whether requested or not, if it is enabled, all plugins 
 	 * will get a pointer to the VSP listener through IMetamodListener.
 	 */
@@ -303,6 +303,15 @@ public:		// Added in 1.4 (1:5)
 	 * @return				Message name, or NULL on failure.
 	 */
 	virtual const char *GetUserMessage(int index, int *size=NULL) =0;
+public:		// Added in 1.4.1 (1:6)
+	/**
+	 * @brief Returns the highest interface version of IServerPluginCallbacks that the engine supports.
+	 * This is useful for games that run on older versions of the Source engine, such as The Ship.
+	 *
+	 * @return				Highest interface version of IServerPluginCallbacks.
+	 *						Returns 0 if SourceMM's VSP listener isn't currently enabled.
+	 */
+	virtual int GetVSPVersion() =0;
 };
 
 
@@ -314,7 +323,8 @@ public:		// Added in 1.4 (1:5)
  * 1.2   Added API more helper functions and new SourceHook version.
  * 1.2.2 Added API for printing to client console (with string formatting).
  * 1.3   Added new interface search API.
- * 1.4	 Added VSP listener and user message API.
+ * 1.4   Added VSP listener and user message API.
+ * 1.4.1 Added API for getting highest supported version of IServerPluginCallbacks.
  */
 
 #endif //_INCLUDE_ISMM_API_H
