@@ -35,11 +35,14 @@
 #define		SOURCEMM_VERSION	SVN_FILE_VERSION_STRING
 #define		SOURCEMM_DATE		__DATE__
 #define		SM_VERS_API_MAJOR	1		//increase this on a breaking change
-#define		SM_VERS_API_MINOR	5		//increase this on a non-breaking API change
+#define		SM_VERS_API_MINOR	6		//increase this on a non-breaking API change
 
-//We need a good CServerGameDLL version to work properly.  We support these inclusively.
+/* We need a good CServerGameDLL version to work properly.  We support these inclusively. */
 #define	MIN_GAMEDLL_VERSION	3
 #define	MAX_GAMEDLL_VERSION	8
+
+/* Maximum version of IServerPluginCallbacks that SourceMM supports */
+#define MAX_VSP_VERSION 2
 
 /**
  * @brief Entry point for HL2 Engine
@@ -113,6 +116,9 @@ extern PluginId g_PLID;
 
 /** @brief ServerGameDLL version that is currently loaded */
 extern int g_GameDllVersion;
+
+/** @brief Highest IServerPluginCallbacks version that is supported by engine */
+extern int g_VspVersion;
 
 extern bool bGameInit;
 
